Updated with team colors

--- a/html/views/overlay-wftda-logo.html
+++ b/html/views/overlay-wftda-logo.html
@@ -18,12 +18,14 @@
 
 <body>
 <div id="mainDiv">
-  <div id="WftdaMain" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/main.png"/></div>
+  <div id="WftdaMain" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/main_tc.png"/></div>
+  <div id="WftdaT1CV" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/t1_cover.png"/></div>
   <div id="WftdaT1LD" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/t1_lead.png"/></div>
   <div id="WftdaT1OR" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/t1_or.png"/></div>
   <div id="WftdaT1T1" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/t1_to1.png"/></div>
   <div id="WftdaT1T2" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/t1_to2.png"/></div>
   <div id="WftdaT1T3" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/t1_to3.png"/></div>
+  <div id="WftdaT2CV" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/t2_cover.png"/></div>
   <div id="WftdaT2LD" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/t2_lead.png"/></div>
   <div id="WftdaT2OR" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/t2_or.png"/></div>
   <div id="WftdaT2T1" class="Full"><img class="Bar" src="/views/images/overlay-wftda-logo/t2_to1.png"/></div>
@@ -49,7 +51,7 @@
     </div>
     <div id="ClockTimeoutTime" class="noBack">
       <a class="ClockJLT"></a>
-    </div>
+    </div> 
     <div id="ClockJamNumber" class="noBack">
       <a><span class="Name">J</span><span class="Number"></span></a>
     </div>
@@ -58,7 +60,7 @@
   <div id="BottomBarFullWidth">
     <div id="OverlayLogo"><img class="logoscale"></img></div>
   </div>
-
+ 
   <div id="BottomBar">
     <div id="Team1TimeOuts" class="TimeOuts"><a></a></div>
     <div id="Team1Name" class="noBack" ><a class="Name"></a><a class="AlternateName"></a></div>
