--- a/html/views/overlay-wftda.html
+++ b/html/views/overlay-wftda.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Strict//EN">
-<html><head><title>WFTDA CRG SB Overlay</title>
+<html><head><title>CRG SB Overlay</title>
 
 <!--
  Copyright (C) 2008-2013 Mr Temper <MrTemper@CarolinaRollergirls.com>, Rob Thomas, and WrathOfJon <crgscorespam@sacredregion.com>
@@ -18,12 +18,14 @@
 
 <body>
 <div id="mainDiv">
-  <div id="WftdaMain" class="Full"><img class="Bar" src="/views/images/overlay-wftda/main.png"/></div>
+  <div id="WftdaMain" class="Full"><img class="Bar" src="/views/images/overlay-wftda/main_tc.png"/></div>
+  <div id="WftdaT1CV" class="Full"><img class="Bar" src="/views/images/overlay-wftda/t1_cover.png"/></div>
   <div id="WftdaT1LD" class="Full"><img class="Bar" src="/views/images/overlay-wftda/t1_lead.png"/></div>
   <div id="WftdaT1OR" class="Full"><img class="Bar" src="/views/images/overlay-wftda/t1_or.png"/></div>
   <div id="WftdaT1T1" class="Full"><img class="Bar" src="/views/images/overlay-wftda/t1_to1.png"/></div>
   <div id="WftdaT1T2" class="Full"><img class="Bar" src="/views/images/overlay-wftda/t1_to2.png"/></div>
   <div id="WftdaT1T3" class="Full"><img class="Bar" src="/views/images/overlay-wftda/t1_to3.png"/></div>
+  <div id="WftdaT2CV" class="Full"><img class="Bar" src="/views/images/overlay-wftda/t2_cover.png"/></div>
   <div id="WftdaT2LD" class="Full"><img class="Bar" src="/views/images/overlay-wftda/t2_lead.png"/></div>
   <div id="WftdaT2OR" class="Full"><img class="Bar" src="/views/images/overlay-wftda/t2_or.png"/></div>
   <div id="WftdaT2T1" class="Full"><img class="Bar" src="/views/images/overlay-wftda/t2_to1.png"/></div>
@@ -56,8 +58,6 @@
   </div>
 
   <div id="BottomBarFullWidth">
-    <div id="Team1Logo" class="logos"><img></img></div>
-    <div id="Team2Logo" class="logos"><img></img></div>   
   </div>
  
   <div id="BottomBar">
