--- a/html/views/overlay-wftda.css
+++ b/html/views/overlay-wftda.css
@@ -26,16 +26,17 @@ img.Bar { width: 100%; top: 82.4%; }
 
 /* These probably DON'T need to be on seperate z-indexes.. But if they want to change the logos, they may. */
 
+#WftdaT1CV { z-index:85; }
 #WftdaT1OR { z-index:200; }
 #WftdaT1T1 { z-index:190; }
 #WftdaT1T2 { z-index:180; }
 #WftdaT1T3 { z-index:170; }
 
+#WftdaT2CV { z-index:85; }
 #WftdaT2OR { z-index:150; }
 #WftdaT2T1 { z-index:140; }
 #WftdaT2T2 { z-index:130; }
 #WftdaT2T3 { z-index:120; }
-
 
 
 /*
@@ -52,7 +53,7 @@ a {
   font-weight: bold;
 }
 
-#StatusBar { left: 25%; right: 25%; top: 92%; bottom: 2%; text-align: center; font-size: 2.75%; z-index: 300; }
+#StatusBar { left: 45%; right: 45.4%; top: 92%; bottom: 2%; text-align: center; font-size: 2.75%; z-index: 300; }
 #TopBar { left: 0%; width: 100%; top: 0%; height: 100%; text-align: center; z-index: 300; }
 
 #StatusBar a { color: white; }
@@ -76,23 +77,23 @@ a {
 
 
 
-#BottomBar { left: 0%; width: 100%; top 0%; height: 100%; text-align: center; z-index: 300; }
+#BottomBar { left: 0%; width: 100%; top 0%; height: 100%; text-align: center; }
 
-#Team1Name { top: 84.75%; height: 7%; left: 15%; width: 13%; text-align: left; overflow: hidden; font-size: 5.2%; }
-#Team1Score { top: 84.75%; height: 7%; right: 67%; width: 25%; text-align: right; font-size: 5.2%; }
+#Team1Name { top: 84.75%; height: 7%; left: 11.5%; padding-left: 3%; padding-right: 5%; width: 13%; text-align: left; overflow: hidden; font-size: 5.2%; z-index: 90; }
+#Team1Score { top: 84.75%; height: 7%; right: 67%; width: 25%; text-align: right; font-size: 5.2%; z-index: 300; }
 
-#Team2Name { top: 84.75%; height: 7%; right: 15%; width: 13%; text-align: right; overflow: hidden; font-size: 5.2%; }
-#Team2Score { top: 84.75%; height: 7%; left: 67%; width: 25%; text-align: left; font-size: 5.2%; }
+#Team2Name { top: 84.75%; height: 7%; right: 11.5%; padding-right: 3%; padding-left: 5%; width: 15%; text-align: right; overflow: hidden; font-size: 5.2%; z-index: 90; }
+#Team2Score { top: 84.75%; height: 7%; left: 67%; width: 25%; text-align: left; font-size: 5.2%; z-index: 300; }
 
 #Team1Name.AlternateName a.Name { display: none; }
 #Team1Name:not(.AlternateName) a.AlternateName { display: none; }
 #Team2Name.AlternateName a.Name { display: none; }
 #Team2Name:not(.AlternateName) a.AlternateName { display: none; }
 
-#BottomBarFullWidth { top: 85.5%; bottom: 0; width: 100%; z-index: 300; }
-#Team1Logo,#Team2Logo { bottom: 0; height: 100%; }
-#Team1Logo { left: 0%; right: 90%; }
-#Team2Logo { left: 90%; right: 0% }
+#BottomBarFullWidth { top: 82.95%; height: 9.2%; left: 46.9%; width: 5.8%; z-index: 300; }
+#OverlayLogo { bottom: 0%; height: 100%; right: 0px; left: 0px; }
+
+.logoscale { vertical-align: middle; position: absolute; top: 0; bottom: 0; left: 0; right: 0; margin: auto; max-width: 100%; max-height: 100%; height: auto; width: auto; }
 
 .noBack {
 	background-color:rgba(0,255,0,0.0);
