Add settings model, attach to scoreboard, implement intermission messages as scoreboard settings

--- a/html/views/scoreboard.html
+++ b/html/views/scoreboard.html
@@ -153,16 +153,7 @@
 				</div>
 				<div class="Intermission Clock ShowIntermission">
 					<div class="Name WhiteBox"></div>
-					<div class="Name TextContainer">
-						<a>
-							<span class="Unofficial 0" style="display: none;"></span>
-							<span class="Name 0" style="display: none;"></span>
-							<span class="Unofficial 1"></span>
-							<span class="Name 1"></span>
-							<span class="Unofficial 2" style="display: none;"></span>
-							<span class="Name 2" style="display: none;"></span>
-						</a>
-					</div>
+					<div class="Name TextContainer"><a></a></div>
 					<div class="Time WhiteBox"></div>
 					<div class="Time TextContainer"><a><span class="Time"></span></a></div>
 				</div>
